<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/_0"
        android:textSize="30sp"
        android:textColor="@color/black"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_gray_600"
            android:insetLeft="1dp"
            android:insetTop="1dp"
            android:insetRight="1dp"
            android:insetBottom="1dp"
            android:onClick="onClickFunction"
            android:text="@string/_sin"
            android:textAllCaps="false"
            android:textSize="22sp" />
        <Button
            android:id="@+id/buttonCos"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_gray_600"
            android:insetLeft="1dp"
            android:insetTop="1dp"
            android:insetRight="1dp"
            android:insetBottom="1dp"
            android:onClick="onClickFunction"
            android:text="@string/_cos"
            android:textAllCaps="false"
            android:textSize="22sp" />
        <Button
            android:id="@+id/buttonTan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_gray_600"
            android:insetLeft="1dp"
            android:insetTop="1dp"
            android:insetRight="1dp"
            android:insetBottom="1dp"
            android:onClick="onClickFunction"
            android:text="@string/_tan"
            android:textAllCaps="false"
            android:textSize="22sp" />
        <Button
            android:id="@+id/buttonCat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_gray_600"
            android:insetLeft="1dp"
            android:insetTop="1dp"
            android:insetRight="1dp"
            android:insetBottom="1dp"
            android:onClick="onClickFunction"
            android:text="@string/_cat"
            android:textAllCaps="false"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonLg"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_gray_600"
            android:insetLeft="1dp"
            android:insetTop="1dp"
            android:insetRight="1dp"
            android:insetBottom="1dp"
            android:onClick="onClickFunction"
            android:text="@string/_lg"
            android:textAllCaps="false"
            android:textSize="22sp" />
        <Button
            android:id="@+id/buttonLn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_gray_600"
            android:insetLeft="1dp"
            android:insetTop="1dp"
            android:insetRight="1dp"
            android:insetBottom="1dp"
            android:onClick="onClickFunction"
            android:text="@string/_ln"
            android:textAllCaps="false"
            android:textSize="22sp" />
        <Button
            android:id="@+id/buttonLeftBracket"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_gray_600"
            android:insetLeft="1dp"
            android:insetTop="1dp"
            android:insetRight="1dp"
            android:insetBottom="1dp"
            android:onClick="onClickDigit"
            android:text="@string/_left_bracket"
            android:textAllCaps="false"
            android:textSize="22sp" />
        <Button
            android:id="@+id/buttonRightBracket"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_gray_600"
            android:insetLeft="1dp"
            android:insetTop="1dp"
            android:insetRight="1dp"
            android:insetBottom="1dp"
            android:onClick="onClickDigit"
            android:text="@string/_right_bracket"
            android:textAllCaps="false"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonAC"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_gray_700"
            android:insetLeft="1dp"
            android:insetTop="1dp"
            android:insetRight="1dp"
            android:insetBottom="1dp"
            android:onClick="onClickAC"
            android:text="@string/_ac"
            android:textSize="22sp" />

        <Button
            android:id="@+id/buttonBackspace"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_gray_700"
            android:insetLeft="1dp"
            android:insetTop="1dp"
            android:insetRight="1dp"
            android:insetBottom="1dp"
            android:onClick="onClickBackspace"
            android:text="@string/_backspace"
            android:textSize="22sp" />
        <Button
            android:id="@+id/buttonPercent"
            android:text="@string/_percent"
            android:textSize="22sp"
            android:backgroundTint="@color/blue_gray_700"
            android:insetTop="1dp"
            android:insetBottom="1dp"
            android:insetLeft="1dp"
            android:insetRight="1dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_gray_700"
            android:insetLeft="1dp"
            android:insetTop="1dp"
            android:insetRight="1dp"
            android:insetBottom="1dp"
            android:onClick="onClickOperation"
            android:text="@string/_division"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button1"
            android:onClick="onClickDigit"
            android:text="@string/_1"
            android:textSize="22sp"
            android:backgroundTint="@color/blue_gray_300"
            android:insetTop="1dp"
            android:insetBottom="1dp"
            android:insetLeft="1dp"
            android:insetRight="1dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_gray_300"
            android:insetLeft="1dp"
            android:insetTop="1dp"
            android:insetRight="1dp"
            android:insetBottom="1dp"
            android:onClick="onClickDigit"
            android:text="@string/_2"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_gray_300"
            android:insetLeft="1dp"
            android:insetTop="1dp"
            android:insetRight="1dp"
            android:insetBottom="1dp"
            android:onClick="onClickDigit"
            android:text="@string/_3"
            android:textSize="22sp" />

        <Button
            android:id="@+id/buttonMultiplication"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_gray_700"
            android:insetLeft="1dp"
            android:insetTop="1dp"
            android:insetRight="1dp"
            android:insetBottom="1dp"
            android:onClick="onClickOperation"
            android:text="@string/_multiplication"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_gray_300"
            android:insetLeft="1dp"
            android:insetTop="1dp"
            android:insetRight="1dp"
            android:insetBottom="1dp"
            android:onClick="onClickDigit"
            android:text="@string/_4"
            android:textSize="22sp" />
        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_gray_300"
            android:insetLeft="1dp"
            android:insetTop="1dp"
            android:insetRight="1dp"
            android:insetBottom="1dp"
            android:onClick="onClickDigit"
            android:text="@string/_5"
            android:textSize="22sp" />
        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_gray_300"
            android:insetLeft="1dp"
            android:insetTop="1dp"
            android:insetRight="1dp"
            android:insetBottom="1dp"
            android:onClick="onClickDigit"
            android:text="@string/_6"
            android:textSize="22sp" />

        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_gray_700"
            android:insetLeft="1dp"
            android:insetTop="1dp"
            android:insetRight="1dp"
            android:insetBottom="1dp"
            android:onClick="onClickOperation"
            android:text="@string/_minus"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_gray_300"
            android:insetLeft="1dp"
            android:insetTop="1dp"
            android:insetRight="1dp"
            android:insetBottom="1dp"
            android:onClick="onClickDigit"
            android:text="@string/_7"
            android:textSize="22sp" />
        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_gray_300"
            android:insetLeft="1dp"
            android:insetTop="1dp"
            android:insetRight="1dp"
            android:insetBottom="1dp"
            android:onClick="onClickDigit"
            android:text="@string/_8"
            android:textSize="22sp" />
        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_gray_300"
            android:insetLeft="1dp"
            android:insetTop="1dp"
            android:insetRight="1dp"
            android:insetBottom="1dp"
            android:onClick="onClickDigit"
            android:text="@string/_9"
            android:textSize="22sp" />

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_gray_700"
            android:insetLeft="1dp"
            android:insetTop="1dp"
            android:insetRight="1dp"
            android:insetBottom="1dp"
            android:onClick="onClickOperation"
            android:text="@string/_plus"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonPoint"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_gray_300"
            android:insetLeft="1dp"
            android:insetTop="1dp"
            android:insetRight="1dp"
            android:insetBottom="1dp"
            android:onClick="onClickDigit"
            android:text="@string/_point"
            android:textSize="22sp" />
        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_gray_300"
            android:insetLeft="1dp"
            android:insetTop="1dp"
            android:insetRight="1dp"
            android:insetBottom="1dp"
            android:onClick="onClickDigit"
            android:text="@string/_0"
            android:textSize="22sp" />
        <Button
            android:id="@+id/buttonE"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/blue_gray_300"
            android:insetLeft="1dp"
            android:insetTop="1dp"
            android:insetRight="1dp"
            android:insetBottom="1dp"
            android:onClick="onClickE"
            android:text="@string/_e"
            android:textAllCaps="false"
            android:textSize="22sp" />
        <Button
            android:id="@+id/buttonEquals"
            android:text="@string/_equals"
            android:textSize="22sp"
            android:backgroundTint="@color/blue_gray_700"
            android:insetTop="1dp"
            android:insetBottom="1dp"
            android:insetLeft="1dp"
            android:insetRight="1dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
